--- a/cmake_test/CMakeLists.txt
+++ b/cmake_test/CMakeLists.txt
@@ -7,3 +7,4 @@ include_directories(include)
 file(GLOB SOURCES "src/*.cpp")
 
 add_executable(pesel_test ${SOURCES})
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}  -Wall -g -pedantic -pedantic-errors -Wextra")
